tests/expectations/compiler/statements/multiple_returns_in_one_block_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:6:9
     |
   6 |         let double: u32 = x + x;
     |         ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:7:9
     |
   7 |         return double;
     |         ^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
